# portScanner_main

./: .env.example  .gitignore  26-03-12.md  26-03-18.md  26-03-20-1.md  26-03-20.md  DEVELOPER_GUIDE.md  PROJECT_SPEC.md  README.md  REPORT_GUIDE.md  analyzer.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  risk_engine.py  scenario.sh  scenario_setup.sh  test_analyzer.py  기획.md
Docs/: DEVELOPER_GUIDE.md  INTEGRATION_UPDATE.md  PROJECT_SPEC.md  REPORT_GUIDE.md
analysis/: UPDATE_NOTES.md  __init__.py  analyzer.py  cve_lookup.py  epss_lookup.py  kev_lookup.py  models.py  report_sample.json  risk_engine.py  risk_report.py  test_analyzer.py
analysis/tests/: conftest.py  test_analyzer.py
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py  schemas.py  storage.py
backend/app/services/: inventory_service.py  report_service.py  scenario_service.py
dashboard/: Dockerfile  app.py
scanner/: __init__.py  mock_scan.py  nmap_scan.py  pyproject.toml  scan.py
scenarios/: README.md  scenario_setup.sh
scenarios/redis_drift/: scenario.sh  setup.sh
